# 21ws-biodb-projekt

./: Cargo.toml  test
src/: gc_content.rs  gtf.rs  main.rs  plots.rs
