[package]
name = "biodb"
version = "0.1.0"
edition = "2021"
authors = ["Konrad Buchmann"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
bio = "0.39"
plotters = "0.3"
colorous = "1.0"
anyhow = "1.0"
flate2 = "1.0"
regex = "1.5"
lazy_static = "1.4"
# rustplotlib = "0.0.4"
bigtools = "0.1.5"